--- a/src/Cerberix.Serialization/Cerberix.Serialization.csproj
+++ b/src/Cerberix.Serialization/Cerberix.Serialization.csproj
@@ -3,19 +3,19 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
-    <Authors>pacjman@cerberix.net</Authors>
+    <Authors>hai@cerberix.net</Authors>
     <Company>cerberix.net</Company>
     <Description>core serialization module for dot net standard</Description>
     <RepositoryUrl>https://github.com/cerberix-net/util-nuget-serialization/</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>https://github.com/cerberix-net/util-nuget-serialization/blob/master/LICENSE</PackageLicenseUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/cerberix-net/util-nuget-serialization/master/img/cerberix.png</PackageIconUrl>
-    <PackageId>Cerberix.Serialization.Core</PackageId>
-    <Product>Cerberix.Serialization.Core</Product>
+    <PackageId>Cerberix.Serialization</PackageId>
+    <Product>Cerberix.Serialization</Product>
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
   </PropertyGroup>
 
