--- a/src/Cerberix.Serialization.JsonNet12/Cerberix.Serialization.JsonNet12.csproj
+++ b/src/Cerberix.Serialization.JsonNet12/Cerberix.Serialization.JsonNet12.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
-    <Authors>pacjman@cerberix.net</Authors>
+    <Authors>hai@cerberix.net</Authors>
     <Company>cerberix.net</Company>
     <Description>newtonsoft json.net (v12) serialization module for dot net standard</Description>
     <RepositoryUrl>https://github.com/cerberix-net/util-nuget-serialization/</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cerberix.Serialization.Core" Version="1.0.0" />
+    <PackageReference Include="Cerberix.Serialization" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
